# kaggle-nbme-score-clinical-patient-notes

./: .gitignore  README.md  project.yaml  project.yml  pyproject.toml
scripts/: main.py  preprocess.py
working/: 20220227_preprocess_split_data.ipynb  20220306-preprocess-docs.ipynb  nbme-patient-notes-baseline.ipynb  nbme-patient-notes-eda.ipynb  nbme-patient-notes-inference.ipynb  nbme-patient-notes-training.ipynb
