[tool.poetry]
name = "nbme_score_clinical_patient_notes"
version = "0.1.0"
description = ""
authors = ["Alexander Junge <alexander.junge@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
tensorflow = "^2.8.0"
scikit-learn = "^1.0.2"
pandas = "^1.3"
spacy = "^3.2.3"
wasabi = "^0.9.0"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
